--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
 
 
 # project name
-PROJECT( ExportEvt )
+PROJECT( Utils )
+PROJECT( HiggsTruthAna )
 
 # project version
 SET( ${PROJECT_NAME}_VERSION_MAJOR 0 )
