update some SimAna

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ INCLUDE( ilcsoft_default_settings )
 
 FIND_PACKAGE( Marlin 1.0 REQUIRED ) # minimum required Marlin version
 INCLUDE_DIRECTORIES( ${Marlin_INCLUDE_DIRS} )
+INCLUDE_DIRECTORIES( ${MarlinKinfit_INCLUDE_DIRS} )
 LINK_LIBRARIES( ${Marlin_LIBRARIES} )
 ADD_DEFINITIONS( ${Marlin_DEFINITIONS} )
 
@@ -32,7 +33,17 @@ FIND_PACKAGE( MarlinUtil 1.0 REQUIRED ) # minimum required MarlinUtil version
 INCLUDE_DIRECTORIES( ${MarlinUtil_INCLUDE_DIRS} )
 LINK_LIBRARIES( ${MarlinUtil_LIBRARIES} )
 ADD_DEFINITIONS( ${MarlinUtil_DEFINITIONS} )
-# 
+
+FIND_PACKAGE ( FastJet )
+IF ( NOT ${FastJet_VERSION} VERSION_LESS 3 )
+  FIND_PACKAGE( FastJet 3 REQUIRED COMPONENTS siscone siscone_spherical fastjetplugins )
+ELSEIF ( NOT ${FastJet_VERSION} VERSION_LESS 2.4.2 )
+  FIND_PACKAGE( FastJet 2 REQUIRED COMPONENTS SISConePlugin )
+ENDIF()
+
+INCLUDE_DIRECTORIES( SYSTEM ${FastJet_INCLUDE_DIRS} )
+LINK_LIBRARIES( ${FastJet_LIBRARIES} ${FastJet_COMPONENT_LIBRARIES} )
+
 # FIND_PACKAGE( MarlinTrk REQUIRED ) 
 # INCLUDE_DIRECTORIES( ${MarlinTrk_INCLUDE_DIRS} )
 # LINK_LIBRARIES( ${MarlinTrk_LIBRARIES} )
@@ -43,10 +54,10 @@ INCLUDE_DIRECTORIES( ${ROOT_INCLUDE_DIRS} )
 LINK_LIBRARIES( ${ROOT_LIBRARIES} )
 ADD_DEFINITIONS( ${ROOT_DEFINITIONS} )
 
-# FIND_PACKAGE( GSL REQUIRED ) 
-# INCLUDE_DIRECTORIES( ${GSL_INCLUDE_DIRS} )
-# LINK_LIBRARIES( ${GSL_LIBRARIES} )
-# ADD_DEFINITIONS( ${GSL_DEFINITIONS} )
+FIND_PACKAGE( GSL REQUIRED ) 
+INCLUDE_DIRECTORIES( ${GSL_INCLUDE_DIRS} )
+LINK_LIBRARIES( ${GSL_LIBRARIES} )
+ADD_DEFINITIONS( ${GSL_DEFINITIONS} )
 
 # optional package
 #FIND_PACKAGE( RAIDA )
